force-app/main/default/objects/Coupon__c/Coupon__c.object-meta.xml
<CustomObject>
    <description>Personalized coupons issued by the Post-Purchase Growth agent. Pushed to WooCommerce for enforcement.</description>
    <label>Coupon</label>
    <pluralLabel>Coupons</pluralLabel>
    <nameField><label>Coupon Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>