force-app/main/default/objects/Coupon__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName><label>Account</label><type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName><deleteConstraint>SetNull</deleteConstraint>
</CustomField>