force-app/main/default/objects/Coupon__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName><label>Code</label><type>Text</type><length>50</length>
    <externalId>true</externalId><unique>true</unique>
    <description>Coupon code customer enters at WooCommerce checkout.</description>
</CustomField>