force-app/main/default/objects/Coupon__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName><label>Discount Percent</label><type>Number</type>
    <precision>4</precision><scale>1</scale>
</CustomField>