force-app/main/default/objects/Coupon__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName><label>Expiry Date</label><type>Date</type>
</CustomField>