force-app/main/default/objects/Coupon__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName><label>Source Order</label><type>Lookup</type>
    <referenceTo>Order</referenceTo><relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName><deleteConstraint>SetNull</deleteConstraint>
</CustomField>