force-app/main/default/objects/Coupon__c/fields/Recommendation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Summary__c</fullName><label>Recommendation Summary</label><type>LongTextArea</type>
    <length>2000</length><visibleLines>4</visibleLines>
</CustomField>