force-app/main/default/objects/Coupon__c/fields/Recommended_Product__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Product__c</fullName><label>Recommended Product</label><type>Lookup</type>
    <referenceTo>Product2</referenceTo><relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName><deleteConstraint>SetNull</deleteConstraint>
</CustomField>