force-app/main/default/objects/Coupon__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Issued</fullName><default>true</default><label>Issued</label></value>
        <value><fullName>Redeemed</fullName><default>false</default><label>Redeemed</label></value>
        <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
    </valueSetDefinition></valueSet>
</CustomField>