force-app/main/default/objects/Coupon__c/fields/Woo_Coupon_Id__c.field-meta.xml
<CustomField>
    <fullName>Woo_Coupon_Id__c</fullName><label>Woo Coupon Id</label><type>Text</type><length>50</length>
    <externalId>true</externalId>
</CustomField>